fix(AddCredential): validate token when adding a credential. feat(AddCredential): add modal for the form and eye icon for password visibility.

--- a/frontend/src/styles/credentials/Home.css
+++ b/frontend/src/styles/credentials/Home.css
@@ -1,3 +1,7 @@
+.addCredentialOpen {
+  margin-bottom: 20px;
+}
+
 .credentials-container {
     display: flex;
     flex-wrap: wrap;
